corringindo páginas - pt2

--- a/android/local.properties
+++ b/android/local.properties
@@ -1,1 +1,1 @@
-flutter.sdk=C:\\Users\\thais_barbosa\\Documents\\flutter
+flutter.sdk=C:\\Users\\rosin\\OneDrive\\Favoritos compartilhados\\Documentos\\flutter
