--- a/ios/Flutter/Generated.xcconfig
+++ b/ios/Flutter/Generated.xcconfig
@@ -1,4 +1,6 @@
 // This is a generated file; do not edit or check into version control.
+FLUTTER_ROOT=C:\Users\rosin\OneDrive\Favoritos compartilhados\Documentos\flutter
+FLUTTER_APPLICATION_PATH=C:\Users\rosin\OneDrive\Favoritos compartilhados\Documentos\zoocare
 COCOAPODS_PARALLEL_CODE_SIGN=true
 FLUTTER_TARGET=lib\main.dart
 FLUTTER_BUILD_DIR=build
